examples/test/testpolicy3802.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3802
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key22: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value36
          key41: value32
          key36: value1
      podSelector:
        matchLabels:
          key25: value27
          key38: value21
